--- a/Navigation.html
+++ b/Navigation.html
@@ -40,7 +40,7 @@
                                                         </tr>
                                                     </table>  
                                                 </td>
-                                                <td width="550" rowspan="2"> 
+                                                <td width="560" rowspan="2"> 
                                                     <table>
                                                         <tr>
                                                             <td>
@@ -53,7 +53,7 @@
                                                                             <td height="25">&nbsp;Gobble up Gobble Gums!</td>
                                                                         </tr>
                                                                         <tr>
-                                                                            <td height="25">&nbsp;&nbsp;Guilt-free gums for our loved ones.</td>
+                                                                            <td height="25">&nbsp;&nbsp; Guilt-free gums for your loved ones.</td>
                                                                         </tr>
                                                                     </table>
                                                                 </font>
@@ -97,14 +97,14 @@
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <a href="Product.html" target="_self">
+                                                        <a href="Product1.html" target="_self">
                                                         <img src="Product3.png" width="70" onmouseover="this.src='Product4.png';" onmouseout="this.src='Product3.png';"/>
                                                         </a>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
-                                                        <a href="About.html" target="_self">
+                                                        <a href="About1.html" target="_self">
                                                         <img src="About3.png" width="56" onmouseover="this.src='About4.png';" onmouseout="this.src='About3.png';"/>
                                                         </a>
                                                     </td>
@@ -164,7 +164,7 @@
                                                 
                                                             <table height="70">
                                                                 <tr>
-                                                                    <td><a href="Ps.html" target="_self">
+                                                                    <td><a href="Bio1.html" target="_self">
                                                                         <img src="Ps1.png" width="148" onmouseover="this.src='Ps2.png';" onmouseout="this.src='Ps1.png';"/>
                                                                         </a>
                                                                     </td>
