--- a/Product1.html
+++ b/Product1.html
@@ -13,7 +13,7 @@
                         <table>
                             <tr>
                                 <td width="130">
-                                    <a href="index.html" target="_self">
+                                    <a href="Navigation.html" target="_self">
                                         <img src="Logo.png" width="115" alt="GG Logo" title="Back to Homepage" onmouseover="this.src='Logo2.png';" onmouseout="this.src='Logo.png';"/>
                                     </a>
                                 </td>
