--- a/Ca1.html
+++ b/Ca1.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Plant Systematics #9
+                Contemporary Arts #1
             </title>
         </head>
         <body>
@@ -50,41 +50,56 @@
                                                             <td>C</td>
                                                             <td>L</td>
                                                             <td>A</td>
-                                                            <td>D</td>
-                                                            <td>O</td>
-                                                            <td>G</td>
                                                             <td>R</td>
+                                                            <td>I</td>
+                                                            <td>F</td>
+                                                            <td>I</td>
+                                                            <td>C</td>
                                                             <td>A</td>
-                                                            <td>M</td>
+                                                            <td>T</td>
+                                                            <td>I</td>
+                                                            <td>O</td>
+                                                            <td>N</td>
                                                         </tr>
                                                     </table>
                                                 </font>
-                                                <hr width="120" color="#868fa0" size="1">
+                                                <hr width="170" color="#868fa0" size="1">
                                             </legend>
                                             <font size="4" color="#4f5d75">
-                                                <table>
+                                                <table height="1">
                                                     <tr>
                                                         <td>
-                                                            <table width="1400">
+                                                            <table width="800">
                                                                 <tr>
-                                                                    <td height="25">&nbsp;A cladogram is constructed to visualize the hypothetical relationship between the plants; how they are related and their most common ancestors. Depicting their relationship generally allows the</td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td height="25">&nbsp;discovery of their evolutionary history.</td>
-                                                                </tr>
-                                                                <tr>
-                                                                    <td height="25">&nbsp;</td>
+                                                                    <td height="25">
+                                                                        <table>
+                                                                            <tr>
+                                                                                <td>
+                                                                                    <table width="920">
+                                                                                        <tr>
+                                                                                            <td height="25"><h4>&nbsp;CONCEPT: CONTEMPORARY ARTS</h4></td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                            <td height="25">&nbsp;Contemporary Art is defined as “the art of today”. For example, a painting, song, or dance from 1998 is an</td>
+                                                                                        <tr>
+                                                                                            <td height="25">&nbsp;example of Contemporary Art in 1998. It does not have a specific style and it is not a period of art.</td>
+                                                                                        </tr>
+                                                                                        <tr>
+                                                                                            <td height="70">&nbsp;</td>
+                                                                                        </tr>
+                                                                                    </table>
+                                                                                </td>
+                                                                            </tr>
+                                                                        </table>
+                                                                    </td>
                                                                 </tr>
                                                             </table>
                                                         </td>
+                                                        <td><img src="Ca1.gif" align="right" width="400"></td>                                           
                                                     </tr>
-                                                    <tr>
-                                                        <td><center><img src="Cd.png" width="700"></center></td>
-                                                    </tr>
-                                                </table>
-                                            </font>
+                                                </table
+                                        </font>
                                         </fieldset>
-                                        <br>
                                     </td>
                                 </tr>
                             </table>
@@ -96,40 +111,12 @@
                         <font color="white" size="5">
                             <table cellspacing="10" align="center">
                                 <tr>
-                                    <td><a href="Bio1.html" target="_self">
-                                        <img src="B11.png" width="17" onmouseover="this.src='B12.png';" onmouseout="this.src='B11.png';"/>
+                                    <td><a href="Ca1.html" target="_self">
+                                        <img src="B12.png" width="17" onmouseover="this.src='B11.png';" onmouseout="this.src='B12.png';"/>
                                         </a>
                                     </td>
-                                    <td><a href="Bio2.html" target="_self">
+                                    <td><a href="Ca2.html" target="_self">
                                         <img src="B21.png" width="17" onmouseover="this.src='B22.png';" onmouseout="this.src='B21.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio3.html" target="_self">
-                                        <img src="B31.png" width="17" onmouseover="this.src='B32.png';" onmouseout="this.src='B31.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio4.html" target="_self">
-                                        <img src="B41.png" width="17" onmouseover="this.src='B42.png';" onmouseout="this.src='B41.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio5.html" target="_self">
-                                        <img src="B51.png" width="17" onmouseover="this.src='B52.png';" onmouseout="this.src='B51.png';"/>
-                                    </a>
-                                    </td>
-                                    <td><a href="Bio6.html" target="_self">
-                                        <img src="B61.png" width="17" onmouseover="this.src='B62.png';" onmouseout="this.src='B61.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio7.html" target="_self">
-                                        <img src="B71.png" width="17" onmouseover="this.src='B72.png';" onmouseout="this.src='B71.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio8.html" target="_self">
-                                        <img src="B81.png" width="17" onmouseover="this.src='B82.png';" onmouseout="this.src='B81.png';"/>
-                                        </a>
-                                    </td>
-                                    <td><a href="Bio9.html" target="_self">
-                                        <img src="B92.png" width="17" onmouseover="this.src='B91.png';" onmouseout="this.src='B92.png';"/>
                                         </a>
                                     </td>
                                 </tr>
