--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Homepage
+                GobbleGums
             </title>
         </head>
         <body>
