--- a/Pp4.html
+++ b/Pp4.html
@@ -81,7 +81,7 @@
                                                             <font color="2d3142">
                                                                 <td height="325">
                                                                     <center>
-                                                                    <img src="P1.jpg" alt="Sample" title="Sample" width="1000">
+                                                                    <img src="11.jpg" alt="Process #1" title="Process #1" width="1000">
                                                                     </center>
                                                                 </td>
                                                             </font>
@@ -110,11 +110,11 @@
                                         </a>
                                     </td>
                                     <td><a href="Pp3.html" target="_self">
-                                        <img src="B32.jpg" width="17" onmouseover="this.src='B31.jpg';" onmouseout="this.src='B32.jpg';"/>
+                                        <img src="B31.jpg" width="17" onmouseover="this.src='B32.jpg';" onmouseout="this.src='B31.jpg';"/>
                                         </a>
                                     </td>
                                     <td><a href="Pp4.html" target="_self">
-                                        <img src="B41.jpg" width="17" onmouseover="this.src='B42.jpg';" onmouseout="this.src='B41.jpg';"/>
+                                        <img src="B42.jpg" width="17" onmouseover="this.src='B41.jpg';" onmouseout="this.src='B42.jpg';"/>
                                         </a>
                                     </td>
                                     <td><a href="Pp5.html" target="_self">
